--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
  <head> <link rel="stylesheet" href="style.css">
   <body>
+    <nav> 
+ 
+  <li> <a href="index.html"> Home </a></li>
+  <li> <a href="pagtwo.html"> Basketball Apps </a></li>
+   <li> <a href="pagethree.html"> Basketball Highlights </a></li>
+</nav>
+  <br>
+    <br>
+  
     <center>
     <h3> Jmaze's webstite </h3>
     
