--- a/pagetwo.html
+++ b/pagetwo.html
@@ -1,1 +1,53 @@
+<html>
+<head>
+  <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+  <nav> 
+ 
+<li> <a href="index.html"> Home </a></li>
+<li> <a href="pagtwo.html"> Basketball Apps </a></li>
+<li> <a href="pagethree.html"> Basketball Highlights </a></li>
+</nav>
+  <br>
+  <br>
+    <center>
+    <h3> Basketball </h3>
+      <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/QNiIcHlAU0Vfvn2gPrEU42ScTtPQ0WXVyOiqQv6tOIA/embed?nosource"></iframe>
+   
+      <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/1_UIp5gphGKrnL5-JUrY4Swuyb8fQRCfTJcG6VYPh0o/embed"></iframe>
 
+  <style>    
+nav {
+  list-style-type: none;
+  background-color: #333;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+li a {
+  text-decoration: none;
+  color: white;
+  display: block;
+  float: left;
+  padding: 15px 50px;
+}
+
+li a:hover {
+  background-color: gray;
+  color: black;
+}
+
+body {
+  background-color: wheat;
+}
+
+h3{
+ color: brown; 
+text-decoration: yellow overline underline 6px dashed;
+  word-spacing: 10px;
+  text-shadow: 2px 2px 5px brown;
+}
+    </style>
