--- a/pagetwo.html
+++ b/pagetwo.html
@@ -6,7 +6,7 @@
   <nav> 
  
 <li> <a href="index.html"> Home </a></li>
-<li> <a href="pagtwo.html"> Basketball Apps </a></li>
+<li> <a href="pagetwo.html"> Basketball Apps </a></li>
 <li> <a href="pagethree.html"> Basketball Highlights </a></li>
 </nav>
   <br>
