--- a/pagethree.html
+++ b/pagethree.html
@@ -55,12 +55,14 @@ body {
 h3{
  color: brown; 
 text-decoration: yellow overline underline 6px dashed;
+  font-size: 30px;
   word-spacing: 7px;
   text-shadow: 2px 2px 5px brown;
 }
 h4{
  color: brown; 
 text-decoration: yellow overline underline 6px dashed;
+  font-size: 20px;
   word-spacing: 7px;
   text-shadow: 2px 2px 5px brown;
 }
